--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,7 +1,15 @@
 .NavBar{
     grid-area: NavBar;
     border: 1px solid black;
+    background-color: coral;
 }
-.selected{
-    color: rgb(255, 0, 0);
+/* .selected{
+    font-weight:bold;
+    background-color: black;
+    color: white;
+} */
+.NavBar div a{
+    text-decoration: none;
+    font-weight:bold;
+    color: #000000;
 }
